# Jarvis-Project

./: .env  .gitignore  file_index.json  find_exes.py  find_exes_debug.txt  find_exes_verbose.py  main.py  pyproject.toml  readme.md  requirements.txt  test_chat.py  test_llm.py
docs/: architecture.md
jarvis/: app.py  cli.py  main.py
jarvis/agents/: system_agent.py  web_agent.py
jarvis/ai/: planner.py
jarvis/audio/: stt.py  tts.py  voice_loop.py
jarvis/config/: config.yaml
jarvis/core/: action.py  app_launcher.py  assistant.py  intent_engine.py  router.py  tool_router.py
jarvis/docs/: architecture.md
jarvis/memory/: storage.json
jarvis/modules/memory/: memory_manager.py
jarvis/scripts/: run_assistant.py
jarvis/services/: launcher.py  llm_client.py  scanner.py
jarvis/tests/: test_assistant.py  test_integration.py
jarvis/voice/: listener.py  stt.py  tts.py
jarvis_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: run_assistant.py
tests/: test_assistant.py  test_integration.py
